fix PlainFormatterTest